# letterboxd

./: index_0_text.csv  letterboxd_jupyter.ipynb  readme
api_test/: readme.txt  test_post.ipynb
api_test/api_project/: db.sqlite3
api_test/api_project/api_project/: asgi.py  settings.py  urls.py  wsgi.py
api_test/api_project/base/: models.py
conf/: gunicorn_config.py
first_draft/: create_user_tables.py  get_stats.py  populate_user_diary.py  update_t0_movie_info.py  update_t1_movie_info.py
first_draft/utility/: utility.py
misc_files/: myproject
movie_site/: db.sqlite3  test_post.ipynb  user_table.csv
movie_site/api/: serializers.py  urls.py  views.py
movie_site/app/: Dockerfile.update  pyproject.toml
movie_site/app/src/: generate_topster.py  update_user.py
movie_site/app/utils/: get_stats.py  movie_extract.py  utils.py
movie_site/base/: models.py
movie_site/base/migrations/: 0002_item_day_item_film_item_rating_item_released.py  0005_item2.py  0006_movieinfo.py  0007_remove_movieinfo_type.py
movie_site/image_generation/: urls.py  views.py
movie_site/image_generation/templates/: about.html  error.html  home.html  (+4 more)
movie_site/letterboxd_src/: pyproject.toml
movie_site/letterboxd_src/letterboxd_src/: generate_topster.py  get_stats.py  movie_extract.py  update_user.py
movie_site/letterboxd_src/letterboxd_src/utils/: config.py  utils.py
movie_site/movie_site/: asgi.py  settings.py  urls.py
movie_site/src/: goon.txt  main.py  test.ipynb
movie_site/user_gen/: Dockerfile  pyproject.toml
movie_site/user_gen/src/: main.py  utils.py
(+17 files in other folders)
