[tool.poetry]
name = "letterboxd-src"
version = "0.1.0"
description = ""
authors = ["trschwab <trschwab7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pillow = "^10.1.0"
lxml = "^4.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
