[tool.poetry]
name = "user-gen"
version = "0.1.0"
description = ""
authors = ["trschwab <trschwab7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
